<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:resauto="http://schemas.android.com/apk/res-auto"
        >

      <item
        android:id="@+id/download_menu"
        android:icon="@drawable/action_download"
        resauto:showAsAction="always|withText"
        android:title="@string/action_download">
    </item>
     <item
        android:id="@+id/share_menu"
        android:icon="@drawable/action_share"
        resauto:showAsAction="always"
        android:title="@string/action_share">
    </item>
 
    <item
        android:id="@+id/move_menu"
        android:icon="@drawable/action_move"
        resauto:showAsAction="ifRoom"
        android:title="@string/action_move">
    </item>
    
    <item
        android:id="@+id/delete_menu"
        android:icon="@drawable/action_delete"
        resauto:showAsAction="never"
        android:title="@string/action_delete">
    </item>
</menu>