<!--
  ~ Deutsche Telekom AG owns the right of use concerning the following code taken from the Deutsche Telekom
  ~ Experience Toolbox. You can obtain a copy of the terms and conditions of the Experience Toolbox at
  ~ https://www.design.telekom.com/myaccount/terms-of-use/
  ~
  ~ Copyright (c) 2012. Neuland Multimedia GmbH.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:resauto="http://schemas.android.com/apk/res-auto">

      <item
        android:id="@+id/menu_list_samples_size_small"
        resauto:showAsAction="never"
        android:title="@string/menu_list_samples_sizeSmall">
    </item>
     <item
        android:id="@+id/menu_list_samples_size_medium"
        resauto:showAsAction="never"
        android:title="@string/menu_list_samples_sizeMedium">
    </item>
 
    <item
        android:id="@+id/menu_list_samples_size_large"
        resauto:showAsAction="never"
        android:title="@string/menu_list_samples_sizeLarge">
    </item>
</menu>