<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2012. Neuland Multimedia GmbH. All rights reserved.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/resize_base_rootlayout"
              android:orientation="vertical">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/resize_base_layoutContainer"
                    android:layout_weight="1">
        <RelativeLayout android:id="@+id/resize_base_view_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/boundsViewContainer"
                            android:background="@drawable/red_bounds">
                                <View android:layout_width="match_parent"
                                      android:layout_height="match_parent"
                                      android:background="@drawable/blue_bounds"
                                      android:id="@+id/optionalPaddingBoundsView"/>
            </RelativeLayout>
        </RelativeLayout>
        <ImageView android:id="@+id/sizing_basescreen_thumb_right"
                   android:layout_width="@dimen/Telekom.BU3"
                   android:layout_height="@dimen/Telekom.BU3"
                   android:contentDescription="@string/reize_screens_thumbRight"/>
        <ImageView android:id="@+id/sizing_basescreen_thumb_diagonal"
                   android:layout_width="@dimen/Telekom.BU3"
                   android:layout_height="@dimen/Telekom.BU3"
                   android:contentDescription="@string/reize_screens_thumbDiagonal"/>
        <ImageView android:id="@+id/sizing_basescreen_thumb_down"
                   android:layout_width="@dimen/Telekom.BU3"
                   android:layout_height="@dimen/Telekom.BU3"
                   android:contentDescription="@string/reize_screens_thumbDown"/>
    </RelativeLayout>

    <RelativeLayout android:id="@+id/resize_base_screen_bottom_menu_container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
    </RelativeLayout>
</LinearLayout>
